5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1602_842.log
== TEST (2019-03-31 23:03:57) 
-- CODE:
var = int(input("digite os numeros otario: ")
soma = 0
resto = var%10
var = var // 10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:04:24) 
-- CODE:
var = int(input("digite os numeros otario: ")
soma = 0
while(var>0):
resto = var%10
var = var // 10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:04:42) 
-- CODE:
var = int(input("digite os numeros otario: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:04:48) 
-- CODE:
var = int(input("digite os numeros otario: ")
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:05:31) 
-- CODE:
var = int(input("digita otario: ")
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:08:07) 
-- CODE:
var = int(input("digita seu bosta: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- EXECUTION TIME:
0.137545
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 2
    soma = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:08:14) 
-- CODE:
var = int(input("digita seu bosta: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- EXECUTION TIME:
0.145977
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 2
    soma = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:08:14) 
-- CODE:
var = int(input("digita seu bosta: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:08:16) 
-- CODE:
var = int(input("digita seu bosta: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:09:33) 
-- CODE:
var = int(input("digite o numero com quatro algarismos: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:09:35) 
-- CODE:
var = int(input("digite o numero com quatro algarismos: ")
soma = 0
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:10:45) 
-- CODE:
var = int(input("digite o numero com quatro algarismo: ")
while(var>0)
resto = var%10
var = var//10
soma = soma + resto
print(soma)
-- ERROR:
File "XXXX", line 2
    while(var>0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:12:21) 
-- CODE:
var =int(input("digite: "))
-- ERROR:
File "XXXX", line 2
    while(var>0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:12:40) 
-- CODE:
var =int(input("digite: "))
soma = 0
-- ERROR:
File "XXXX", line 2
    while(var>0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:13:49) 
-- CODE:
var =int(input("digite: "))
soma = 0
while(var>0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while(var>0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:13:57) 
-- CODE:
var =int(input("digite: "))
soma = 0
while (var>0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var>0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:13:57) 
-- CODE:
var =int(input("digite: "))
soma = 0
while (var>0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var>0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:00) 
-- CODE:
var =int(input("digite: "))
soma = 0
while (var>0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var>0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:04) 
-- CODE:
var =int(input("digite: "))
soma = 0
while (var>0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var>0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:13) 
-- CODE:
var =int(input("digite: "))
soma = 0
while (var > 0)
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var > 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:25) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%10
var = var // 10

-- ERROR:
File "XXXX", line 3
    while (var > 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:15:06) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%10
var = var // 10
soma = soma + resto

-- ERROR:
File "XXXX", line 3
    while (var > 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:15:25) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%10
var = var // 10
soma = soma + resto
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:15:50) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%20
var = var // 20
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:16:11) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%80
var = var // 80
soma = soma + resto
print(soma)

-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:16:37) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%40
var = var // 40
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:17:50) 
-- CODE:
var =int(input("digite: "))
soma = 0
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:15) 
-- CODE:
var = int(input("digite: "))
soma = 1
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:41) 
-- CODE:
var = int(input("digite: "))
soma = 10
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:41) 
-- CODE:
var = int(input("digite: "))
soma = 10
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:41) 
-- CODE:
var = int(input("digite: "))
soma = 10
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:41) 
-- CODE:
var = int(input("digite: "))
soma = 10
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:55) 
-- CODE:
var = int(input("digite: "))
soma = 9
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:21:06) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:14) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.159155
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
11
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:18) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.144743
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
11
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:19) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.22028
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
11
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:20) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.134158
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
11
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:20) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.11434
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/842/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:21:20) 
-- CODE:
var = int(input("digite: "))
soma = 8
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.107809
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
11
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:21:59) 
-- CODE:
var = int(input("digite: "))
soma = 0
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:22:06) 
-- CODE:
var = int(input("digite: "))
soma = 0
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- EXECUTION TIME:
0.137729
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
3
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:23:28) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0)
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 3
    while(var>0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:24:00) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0):
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 4
    resto = var%10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:24:00) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0):
resto = var%10
var = var //10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 4
    resto = var%10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:24:21) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0):
resto = var % 10
var = var // 10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 4
    resto = var % 10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:24:39) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0):
resto = var % 10
var = var // 10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 4
    resto = var % 10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:24:41) 
-- CODE:
var = int(input("digite: "))
soma = 0
while(var>0):
resto = var % 10
var = var // 10
soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 4
    resto = var % 10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:30:45) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
	print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:31:36) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
	print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:35:46) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
	print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:35:48) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
	print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:36:28) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:36:43) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:37:06) 
-- CODE:
var = int(input("digite: "))
soma = 8
while(var>0):
	resto = var % 10 
	var = // 10
	soma = soma + resto
print(soma)

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:39:43) 
-- CODE:
var = int(input("digite o numero otario: "))

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:42:45) 
-- CODE:
var = int(input("digite o numero otario: "))

-- ERROR:
File "XXXX", line 5
    var = // 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:49:14) 
-- CODE:
var = int(input("digite o numero otario: "))
soma = 0
while(var>0)
resto = var%10
var = var // 10
soma = soma + resto


-- ERROR:
File "XXXX", line 3
    while(var>0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:52:10) 
-- CODE:
var = int(input("digite o numero otario: "))
soma = 0
while(var>0):
	resto = var%10
	var = var // 10
	soma = soma + resto
	print(soma)

-- OUTPUT:
3
10
11
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:55:34) 
-- CODE:
var = int(input("digite o numero otario: "))
soma = 0
while(var>0):
	var = var // 10
	soma = soma + resto
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + resto
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:55:42) 
-- CODE:
var = int(input("digite o numero otario: "))
soma = 0
while(var>0):
	var = var // 10
	soma = soma + resto
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + resto
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:56:25) 
-- CODE:
var = int(input("digite o numero otario: "))
soma = 0
while(var>0):
	resto = var%10
	soma = soma + resto
	print(soma)

-- OUTPUT:
3
6
9
12
15
18
21
24
27
30
33
36
39
42
45
48
51
54
57
60
63
66
69
72
75
78
81
84
87
90
93
96
99
102
105
108
111
114
117
120
123
126
129
132
135
138
141
144
147
150
153
156
159
162
165
168
171
174
177
180
183
186
189
192
195
198
201
204
207
210
213
216
219
222
225
228
231
234
237
240
243
246
249
252
255
258
261
264
267
270
273
276
279
282
285
288
291
294
297
300
303
306
309
312
315
318
321
324
327
330
333
336
339
342
345
348
351
354
357
360
363
366
369
372
375
378
381
384
387
390
393
396
399
402
405
408
411
414
417
420
423
426
429
432
435
438
441
444
447
450
453
456
459
462
465
468
471
474
477
480
483
486
489
492
495
498
501
504
507
510
513
516
519
522
525
528
531
534
537
540
543
546
549
552
555
558
561
564
567
570
573
576
579
582
585
588
591
594
597
600
603
606
609
612
615
618
621
624
627
630
633
636
639
642
645
648
651
654
657
660
663
666
669
672
675
678
681
684
687
690
693
696
699
702
705
708
711
714
717
720
723
726
729
732
735
738
741
744
747
750
753
756
759
762
765
768
771
774
777
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
